config/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    creationTimestamp: null
    name: back-tier
spec:
    ingress:
    - from:
      - podSelector:    
          matchLabels:
            io.kompose.network/back-tier: "true"
    podSelector:
      matchLabels:
        io.kompose.network/back-tier: "true"
